--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>ohmyfood</h1>
     </header>
     <article>
-        <section>
+        <section id="imageMenu">
             <img src="menu-1b.png" alt="menue_1">
             <img src="menu-2b.png" alt="menue_2">
             <img src="menu-3b.png" alt="menue_3">
@@ -25,7 +25,6 @@
     <footer>
         <button>mentions légales</button>
         <button>Contactez-nous</button>
-
     </footer>
 </body>
 
