--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
             <img src="menu-4b.png" alt="menue_4">
         </section>
 
-        <button>Prochainement</button>
+        <button ><a href="laNoteenchantée.html">Prochainement</a> </button>
+        
     </article>
     <footer>
-        <button>mentions légales</button>
-        <button>Contactez-nous</button>
+        <button><a href="">mentions légales</a></button>
+        <button><a href="">Contactez-nous</a></button>
     </footer>
 </body>
 
