--- a/laNoteenchantée.html
+++ b/laNoteenchantée.html
@@ -61,13 +61,13 @@
                 <p>tarte au citron meringuée destructurée</p>
             </section>
         </section>
-        
+
         <h2>la note enchantée</h2>
 
     </article>
     <footer>
-        <button>mentions légales</button>
-        <button>Contactez-nous</button>
+        <button><a href="">mentions légales</a></button>
+        <button><a href="">Contactez-nous</a></button>
 
     </footer>
 </body>
