ajout de tous les menus

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
 <body>
     <header>
-        <h1>ohmyfood</h1>
+        <h1> ohmyfood</h1>
     </header>
     <article>
         <section id="imageMenu">
-            <img src="menu-1b.png" alt="menue_1">
-            <img src="menu-2b.png" alt="menue_2">
-            <img src="menu-3b.png" alt="menue_3">
-            <img src="menu-4b.png" alt="menue_4">
+            <a href="laNote.html"><img src="menu-1b.png" alt="menue_1"></a>
+            <a href="chicF.html"><img src="menu-2b.png" alt="menue_2"></a>
+            <a href="papilles.html"><img src="menu-3b.png" alt="menue_3"></a>
+            <a href="palette.html"><img src="menu-4b.png" alt="menue_4"></a>
         </section>
 
-        <button ><a href="laNoteenchantée.html">Prochainement</a> </button>
+        <button ><a href="">Prochainement</a> </button>
         
     </article>
     <footer>
