--- a/laNote.html
+++ b/laNote.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>ohmyfood</h1>
+        <a href="index.html"><h1> ohmyfood</h1></a>
     </header>
     <article id="lne">
         <h2>La note enchantée</h2>
