--- a/index.html
+++ b/index.html
@@ -14,10 +14,20 @@
     </header>
     <article>
         <section id="imageMenu">
-            <a href="laNote.html"><img src="menu-1b.png" alt="menue_1"></a>
-            <a href="chicF.html"><img src="menu-2b.png" alt="menue_2"></a>
-            <a href="papilles.html"><img src="menu-3b.png" alt="menue_3"></a>
-            <a href="palette.html"><img src="menu-4b.png" alt="menue_4"></a>
+            <a href="laNote.html">
+                <p>la Note enchantée</p>
+                <p>Menu</p>
+            </a>
+            <a href="chicF.html">
+                <p>le chic à la française</p>
+                <p>menu</p>
+            </a>
+            <a href="papilles.html"><p>le délice des papilles</p>
+                <p>menu</p></a>
+            <a href="palette.html">
+                <p>la palette du goût</p>
+                <p>menu</p>
+            </a>
         </section>
 
         <button ><a href="">Prochainement</a> </button>
