--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     </header>
     <article>
         <section id="imageMenu">
-            <a href="laNote.html">
+            <a class="clickmenu" href="laNote.html">
                 <p>la Note enchantée</p>
                 <p>Menu</p>
             </a>
-            <a href="chicF.html">
+            <a  class="clickmenu" href="chicF.html">
                 <p>le chic à la française</p>
                 <p>menu</p>
             </a>
-            <a href="papilles.html"><p>le délice des papilles</p>
+            <a class="clickmenu" href="papilles.html"><p>le délice des papilles</p>
                 <p>menu</p></a>
-            <a href="palette.html">
+            <a class="clickmenu" href="palette.html">
                 <p>la palette du goût</p>
                 <p>menu</p>
             </a>
@@ -34,7 +34,7 @@
         
     </article>
     <footer>
-        <button><a href="">mentions légales</a></button>
+        <button><a href="">Mentions légales</a></button>
         <button><a href="">Contactez-nous</a></button>
     </footer>
 </body>
