--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceuil</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/dd2369f655.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -14,26 +15,30 @@
     </header>
     <article>
         <section id="imageMenu">
-            <a class="clickmenu" href="laNote.html">
+            <a id="lne" class="clickmenu" href="laNote.html">
+                <i class="fas fa-music"></i>
                 <p>la Note enchantée</p>
                 <p>Menu</p>
             </a>
-            <a  class="clickmenu" href="chicF.html">
+            <a id="lcf" class="clickmenu" href="chicF.html">
                 <p>le chic à la française</p>
                 <p>menu</p>
             </a>
-            <a class="clickmenu" href="papilles.html"><p>le délice des papilles</p>
+            <a id="pap" class="clickmenu" href="papilles.html"><p>le délice des papilles</p>
                 <p>menu</p></a>
-            <a class="clickmenu" href="palette.html">
+            <a id="plt" class="clickmenu" href="palette.html">
                 <p>la palette du goût</p>
                 <p>menu</p>
             </a>
         </section>
+        <section id="buttonMenu">
+            <button  id="buttonProch"><a href="">Prochainement</a> </button>
+        </section>
 
-        <button ><a href="">Prochainement</a> </button>
+        
         
     </article>
-    <footer>
+    <footer id="footerindex">
         <button><a href="">Mentions légales</a></button>
         <button><a href="">Contactez-nous</a></button>
     </footer>
