maj couleur txt
maj ok

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceuil</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@700&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Mr+Dafoe&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Merienda+One&family=Mr+Dafoe&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/dd2369f655.js" crossorigin="anonymous"></script>
 </head>
 
@@ -17,18 +21,20 @@
         <section id="imageMenu">
             <a id="lne" class="clickmenu" href="laNote.html">
                 <i class="fas fa-music"></i>
-                <p>la Note enchantée</p>
-                <p>Menu</p>
+                <h2 class="h2Lne">la Note enchantée</h2>
+                <p class="pBold" >MENU</p>
             </a>
             <a id="lcf" class="clickmenu" href="chicF.html">
-                <p>le chic à la française</p>
-                <p>menu</p>
+                <p>Le chic à la française</p>
+                <p>Menu</p>
             </a>
-            <a id="pap" class="clickmenu" href="papilles.html"><p>le délice des papilles</p>
-                <p>menu</p></a>
+            <a id="pap" class="clickmenu" href="papilles.html">
+                <h2 class="h2Pap">le délice des papilles</h2>
+                <p>Menu</p>
+            </a>
             <a id="plt" class="clickmenu" href="palette.html">
-                <p>la palette du goût</p>
-                <p>menu</p>
+                <h2 class="h2Plt">la palette du goût</h2>
+                <p>Menu</p>
             </a>
         </section>
         <section id="buttonMenu">
