--- a/laNote.html
+++ b/laNote.html
@@ -6,14 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceuil</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Roboto+Slab:wght@500&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/dd2369f655.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <a href="index.html"><h1> ohmyfood</h1></a>
+        <a href="index.html">
+            <h1> ohmyfood</h1>
+        </a>
     </header>
     <article id="lne">
-        <h2>La note enchantée</h2>
+        <section id="sectionlanote">
+            <i class="fas fa-music"></i>
+            <h2 class="h2Lne">La note enchantée</h2>
+        </section>
         <h3>Prélude</h3>
         <section class="sectionColone">
             <section>
@@ -60,9 +68,15 @@
             <section>
                 <p>tarte au citron meringuée destructurée</p>
             </section>
+            <section id="sectionlanote2">
+                <i class="fas fa-music"></i>
+                <h2 class="h2Lne">La note enchantée</h2>
+            </section>
+
+
         </section>
 
-        <h2>la note enchantée</h2>
+
 
     </article>
     <footer>
