--- a/palette.html
+++ b/palette.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceuil</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Merienda+One&family=Mr+Dafoe&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -13,51 +14,51 @@
         <a href="index.html"><h1> ohmyfood</h1></a>
     </header>
     <article id="plt">
-        <h2>La palette du goût</h2>
-        <h3>esquisse</h3>
+        <h2 class="h2Plt">La palette du goût</h2>
+        <h3 class="fontN">esquisse</h3>
         <section class="sectionColone">
             <section>
                 <p>fricassée d'escargot au piment d'espelette</p>
-                <p class="pBold">60€</p>
+                <p>60€</p>
             </section>
             <section>
                 <p>Oeuf au plat assaisonné à la truffe sur lit de caviar</p>
-                <p class="pBold">55€</p>
+                <p>55€</p>
             </section>
             <section>
                 <p>foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
-                <p class="pBold">65€</p>
+                <p>65€</p>
             </section>
         </section>
-        <h3>oeuvre de maître</h3>
+        <h3 class="fontN">oeuvre de maître</h3>
         <section class="sectionColone">
             <section>
                 <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
-                <p class="pBold">70€</p>
+                <p>70€</p>
             </section>
             <section>
                 <p>parmentier de queu de boeuf à la truffe noire sur sa purée de panais</p>
-                <p class="pBold">85€</p>
+                <p>85€</p>
             </section>
             <section>
                 <p>Filet de Turbot aux agrumes</p>
-                <p class="pBold">125€</p>
+                <p>125€</p>
             </section>
         </section>
-        <h3>Au sommet de l'art</h3>
+        <h3 class="fontN">Au sommet de l'art</h3>
         <section class="sectionColone">
 
             <section>
                 <p>Paris-Brest revisité</p>
-                <p class="pBold">55€</p>
+                <p>55€</p>
             </section>
             <section>
                 <p>macaron au chocolat d'exception et glace à la vanille de Madagascar</p>
-                <p class="pBold">65€</p>
+                <p>65€</p>
             </section>
             <section>
                 <p>mousse au chocolat au piment d'espeletteet à la truffe noire</p>
-                <p class="pBold">60€</p>
+                <p>60€</p>
             </section>
         </section>
 
