--- a/papilles.html
+++ b/papilles.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceuil</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Mr+Dafoe&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
+        </style>
 </head>
 
 <body>
@@ -13,51 +17,51 @@
         <a href="index.html"><h1> ohmyfood</h1></a>
     </header>
     <article id="pap">
-        <h2>Le délice des papilles</h2>
-        <h3>Pour bien commencer</h3>
+        <h2 class="h2Pap">Le délice des papilles</h2>
+        <h3 class="fontN">Pour bien commencer</h3>
         <section class="sectionColone">
             <section>
                 <p>tartare de thon assaisonné au yuzu</p>
-                <p class="pBold">55€</p>
+                <p>55€</p>
             </section>
             <section>
                 <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
-                <p class="pBold">89€</p>
+                <p>89€</p>
             </section>
             <section>
                 <p>velouté de cèpes aux truffes</p>
-                <p class="pBold">56€</p>
+                <p>56€</p>
             </section>
         </section>
-        <h3>pour bien continuer</h3>
+        <h3 class="fontN">pour bien continuer</h3>
         <section class="sectionColone">
             <section>
                 <p>poulet rôti aux herbes de provence et sa crème de truffe</p>
-                <p class="pBold">110€</p>
+                <p>110€</p>
             </section>
             <section>
                 <p>langouste rôtie et ses légumes de saison </p>
-                <p class="pBold">205€</p>
+                <p>205€</p>
             </section>
             <section>
                 <p>Côte de boeuf et sa purée de panais</p>
-                <p class="pBold">115€</p>
+                <p>115€</p>
             </section>
         </section>
-        <h3>pour bien terminer</h3>
+        <h3 class="fontN">pour bien terminer</h3>
         <section class="sectionColone">
 
             <section>
                 <p>farandole de desserts du chef</p>
-                <p class="pBold">55€</p>
+                <p>55€</p>
             </section>
             <section>
                 <p>Crème brulée revisitée</p>
-                <p class="pBold">60€</p>
+                <p>60€</p>
             </section>
             <section>
                 <p>Tiramisu à la noisette</p>
-                <p class="pBold">55€</p>
+                <p>55€</p>
             </section>
         </section>
 
