--- a/chicF.html
+++ b/chicF.html
@@ -13,8 +13,8 @@
         <a href="index.html"><h1> ohmyfood</h1></a>
     </header>
     <article id="lcf">
-        <h2>pour se mettre en appétit</h2>
-        <h3>Prélude</h3>
+        <h2>Le chic à la française</h2>
+        <h3>pour se mettre en appétit</h3>
         <section class="sectionColone">
             <section>
                 <p>Tartare de poulpe acidulé aux zests d'orange</p>
