correction index html
séparation du fichier css
style.css pour index.html
stylemenu;css pour les pages menu

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>Menu</p>
             </a>
             <a id="pap" class="clickmenu" href="papilles.html">
-                <h2 class="h2Pap">le délice des papilles</h2>
+                <h2 class="h2Pap">Le délice des papilles</h2>
                 <p>Menu</p>
             </a>
             <a id="plt" class="clickmenu" href="palette.html">
@@ -44,7 +44,7 @@
         
         
     </article>
-    <footer id="footerindex">
+    <footer>
         <button><a href="">Mentions légales</a></button>
         <button><a href="">Contactez-nous</a></button>
     </footer>
