--- a/laNote.html
+++ b/laNote.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceuil</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylemenu.css">
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Roboto+Slab:wght@500&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/dd2369f655.js" crossorigin="anonymous"></script>
