--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header>
         <h1> ohmyfood</h1>
     </header>
-    <article>
-        <section id="imageMenu">
+    <main>
+        <nav id="imageMenu">
             <a id="lne" class="clickmenu" href="laNote.html">
                 <i class="fas fa-music"></i>
                 <h2 class="h2Lne">la Note enchantée</h2>
@@ -36,14 +36,12 @@
                 <h2 class="h2Plt">la palette du goût</h2>
                 <p>Menu</p>
             </a>
-        </section>
-        <section id="buttonMenu">
+        </nav>
+        <nav id="buttonMenu">
             <button  id="buttonProch"><a href="">Prochainement</a> </button>
-        </section>
+        </nav>
 
-        
-        
-    </article>
+    </main>
     <footer>
         <button><a href="">Mentions légales</a></button>
         <button><a href="">Contactez-nous</a></button>
