--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             </a>
         </nav>
         <nav id="buttonMenu">
-            <button  id="buttonProch"><a href="">Prochainement</a> </button>
+            <button id="buttonProch" type="button">Prochainement</button>
         </nav>
 
     </main>
     <footer>
-        <button><a href="">Mentions légales</a></button>
-        <button><a href="">Contactez-nous</a></button>
+        <button type="button">Mentions légales</button>
+        <button type="button">Contactez-nous</button>
     </footer>
 </body>
 
