--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             </a>
         </nav>
         <nav id="buttonMenu">
-            <button id="buttonProch" type="button">Prochainement</button>
+            <a class="afooter" id="buttonProch">Prochainement</a>
         </nav>
 
     </main>
     <footer>
-        <button type="button">Mentions légales</button>
-        <button type="button">Contactez-nous</button>
+        <a class="afooter">Mentions légales</a>
+        <a class="afooter">Contactez-nous</a>
     </footer>
 </body>
 
