--- a/laNote.html
+++ b/laNote.html
@@ -13,76 +13,88 @@
 
 <body>
     <header>
-        <a href="index.html">
-            <h1> ohmyfood</h1>
-        </a>
+        <h1> ohmyfood</h1>
     </header>
-    <article id="lne">
-        <section id="sectionlanote">
-            <i class="fas fa-music"></i>
-            <h2 class="h2Lne">La note enchantée</h2>
-        </section>
-        <h3>Prélude</h3>
-        <section class="sectionColone">
-            <section>
-                <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p>
-                <p class="pBold">98€</p>
-            </section>
-            <section>
-                <p>Caviar osciètre sur blini à la farine de blé noir</p>
-                <p class="pBold">115€</p>
-            </section>
-            <section>
-                <p>Homard et espuma de potiron mariné aux zests d'orange</p>
-                <p class="pBold">89€</p>
-            </section>
-            <section>
-                <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
-                <p class="pBold">105€</p>
-            </section>
-        </section>
-        <h3>Point d'orgue</h3>
-        <section class="sectionColone">
-            <section>
-                <p>Noix de coquilles saint-Jacques sur lit de purée de céleri-rave</p>
-                <p class="pBold">102€</p>
-            </section>
-            <section>
-                <p>langoustine poêlée, purée de patate douce </p>
-                <p class="pBold">205€</p>
-            </section>
-            <section>
-                <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
-                <p class="pBold">169€</p>
-            </section>
-        </section>
-        <h3>Mouvement final</h3>
-        <section class="sectionColone">
+    <main>
+        <h1 id="titre">La note enchantée</h1>
 
-            <section>
-                <p>macaron ,oisette et chocolat, glace au caramel brun et sel de guérande</p>
-            </section>
-            <section>
-                <p>Baba au rhum revisité avec son coulis de citron</p>
-            </section>
-            <section>
-                <p>tarte au citron meringuée destructurée</p>
-            </section>
-            <section id="sectionlanote2">
+        <article id="lne">
+            <section id="sectionlanote">
                 <i class="fas fa-music"></i>
                 <h2 class="h2Lne">La note enchantée</h2>
             </section>
 
+            <section class="sectionColone">
+                <h3>Prélude</h3>
 
-        </section>
+                <div>
+                    <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p>
+                    <p class="pBold">98€</p>
+                </div>
+
+                <div>
+                    <p>Caviar osciètre sur blini à la farine de blé noir</p>
+                    <p class="pBold">115€</p>
+                </div>
+
+                <div>
+                    <p>Homard et espuma de potiron mariné aux zests d'orange</p>
+                    <p class="pBold">89€</p>
+                </div>
 
 
+                <div>
+                    <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
+                    <p class="pBold">105€</p>
+                </div>
 
-    </article>
+
+            </section>
+
+
+            <section class="sectionColone">
+                <h3>Point d'orgue</h3>
+                <div>
+                    <p>Noix de coquilles saint-Jacques sur lit de purée de céleri-rave</p>
+                    <p class="pBold">102€</p>
+                </div>
+
+
+                <div>
+                    <p>langoustine poêlée, purée de patate douce </p>
+                    <p class="pBold">205€</p>
+                </div>
+
+
+                <div>
+                    <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
+                    <p class="pBold">169€</p>
+                </div>
+
+
+            </section>
+
+            <section class="sectionColone">
+                <h3>Mouvement final</h3>
+
+                <p>macaron ,oisette et chocolat, glace au caramel brun et sel de guérande</p>
+
+
+                <p>Baba au rhum revisité avec son coulis de citron</p>
+
+
+                <p>tarte au citron meringuée destructurée</p>
+            </section>
+
+            <section id="sectionlanote2">
+                <i class="fas fa-music"></i>
+                <h2 class="h2Lne">La note enchantée</h2>
+            </section>
+        </article>
+    </main>
     <footer>
-        <button><a href="">mentions légales</a></button>
-        <button><a href="">Contactez-nous</a></button>
-
+        <a class="afooter">Mentions légales</a>
+        <a class="afooter">Contactez-nous</a>
     </footer>
 </body>
 
