mag page menu w3c
maj ok

--- a/laNote.html
+++ b/laNote.html
@@ -13,19 +13,18 @@
 
 <body>
     <header>
-        <h1> ohmyfood</h1>
+        <h1 id="logo"> ohmyfood</h1>
     </header>
     <main>
-        <h1 id="titre">La note enchantée</h1>
+        <h1>La note enchantée</h1>
 
         <article id="lne">
-            <section id="sectionlanote">
-                
-                <h2 class="h2Lne">La note enchantée</h2>
-                <i class="fas fa-music"></i>
-            </section>
-
+            <h1 id="lanote" class="h2Lne"><i class="fas fa-music"></i><br>
+                La note enchantée</h1>
+            
             <section class="sectionColone">
+
+
                 <h3>Prélude</h3>
 
                 <div>
