maj des pages menu
maj ok
rest w3c a verrifier
et voir le titre page les papilles

--- a/papilles.html
+++ b/papilles.html
@@ -1,76 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceuil</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Mr+Dafoe&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="stylemenu.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Mr+Dafoe&family=Roboto+Slab:wght@500&display=swap"
+        rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
-        </style>
+    </style>
 </head>
 
 <body>
     <header>
-        <a href="index.html"><h1> ohmyfood</h1></a>
+        <h1> ohmyfood</h1>
     </header>
-    <article id="pap">
-        <h2 class="h2Pap">Le délice des papilles</h2>
-        <h3 class="fontN">Pour bien commencer</h3>
-        <section class="sectionColone">
-            <section>
-                <p>tartare de thon assaisonné au yuzu</p>
-                <p>55€</p>
-            </section>
-            <section>
-                <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
-                <p>89€</p>
-            </section>
-            <section>
-                <p>velouté de cèpes aux truffes</p>
-                <p>56€</p>
-            </section>
-        </section>
-        <h3 class="fontN">pour bien continuer</h3>
-        <section class="sectionColone">
-            <section>
-                <p>poulet rôti aux herbes de provence et sa crème de truffe</p>
-                <p>110€</p>
-            </section>
-            <section>
-                <p>langouste rôtie et ses légumes de saison </p>
-                <p>205€</p>
-            </section>
-            <section>
-                <p>Côte de boeuf et sa purée de panais</p>
-                <p>115€</p>
-            </section>
-        </section>
-        <h3 class="fontN">pour bien terminer</h3>
-        <section class="sectionColone">
 
-            <section>
-                <p>farandole de desserts du chef</p>
-                <p>55€</p>
-            </section>
-            <section>
-                <p>Crème brulée revisitée</p>
-                <p>60€</p>
-            </section>
-            <section>
-                <p>Tiramisu à la noisette</p>
-                <p>55€</p>
-            </section>
-        </section>
+    <main>
+        <h1>Le délice des papilles</h1>
+        <article id="pap">
+            <h2 class="h2Pap">Le délice des papilles</h2>
+
+            <section class="sectionColone">
+                <h3 class="fontN">Pour bien commencer</h3>
+                <div>
+                    <p>tartare de thon assaisonné au yuzu</p>
+                    <p>55€</p>
+                </div>
+                <div>
+                    <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
+                    <p>89€</p>
+                </div>
+                <div>
+                    <p>velouté de cèpes aux truffes</p>
+                    <p>56€</p>
+                </div>
+                </div>
+
+                <section class="sectionColone">
+                    <h3 class="fontN">pour bien continuer</h3>
+                    <div>
+                        <p>poulet rôti aux herbes de provence et sa crème de truffe</p>
+                        <p>110€</p>
+                    </div>
+                    <div>
+                        <p>langouste rôtie et ses légumes de saison </p>
+                        <p>205€</p>
+                    </div>
+                    <div>
+                        <p>Côte de boeuf et sa purée de panais</p>
+                        <p>115€</p>
+                    </div>
+                </section>
+
+                <section class="sectionColone">
+                    <h3 class="fontN">pour bien terminer</h3>
+                    <div>
+                        <p>farandole de desserts du chef</p>
+                        <p>55€</p>
+                    </div>
+                    <div>
+                        <p>Crème brulée revisitée</p>
+                        <p>60€</p>
+                    </div>
+                    <div>
+                        <p>Tiramisu à la noisette</p>
+                        <p>55€</p>
+                    </div>
+                </section>
 
 
-    </article>
+        </article>
+    </main>
     <footer>
-        <button><a href="">mentions légales</a></button>
-        <button><a href="">Contactez-nous</a></button>
-
+        <a class="afooter">Mentions légales</a>
+        <a class="afooter">Contactez-nous</a>
     </footer>
 </body>
 
