--- a/palette.html
+++ b/palette.html
@@ -1,73 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceuil</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Merienda+One&family=Mr+Dafoe&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="stylemenu.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Merienda+One&family=Mr+Dafoe&family=Roboto+Slab:wght@500&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <a href="index.html"><h1> ohmyfood</h1></a>
+        <h1> ohmyfood</h1>
     </header>
+    <main>
+        <h1>La palette du goût</h1>
     <article id="plt">
         <h2 class="h2Plt">La palette du goût</h2>
-        <h3 class="fontN">esquisse</h3>
+
         <section class="sectionColone">
-            <section>
+            <h3 class="fontN">esquisse</h3>
+            <div>
                 <p>fricassée d'escargot au piment d'espelette</p>
                 <p>60€</p>
-            </section>
-            <section>
+            </div>
+            <div>
                 <p>Oeuf au plat assaisonné à la truffe sur lit de caviar</p>
                 <p>55€</p>
-            </section>
-            <section>
+            </div>
+            <div>
                 <p>foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
                 <p>65€</p>
-            </section>
+            </div>
         </section>
-        <h3 class="fontN">oeuvre de maître</h3>
+
         <section class="sectionColone">
-            <section>
+            <h3 class="fontN">oeuvre de maître</h3>
+            <div>
                 <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
                 <p>70€</p>
-            </section>
-            <section>
+            </div>
+            <div>
                 <p>parmentier de queu de boeuf à la truffe noire sur sa purée de panais</p>
                 <p>85€</p>
-            </section>
-            <section>
+            </div>
+            <div>
                 <p>Filet de Turbot aux agrumes</p>
                 <p>125€</p>
-            </section>
+            </div>
         </section>
-        <h3 class="fontN">Au sommet de l'art</h3>
-        <section class="sectionColone">
 
-            <section>
+        <section class="sectionColone">
+            <h3 class="fontN">Au sommet de l'art</h3>
+            <div>
                 <p>Paris-Brest revisité</p>
                 <p>55€</p>
-            </section>
-            <section>
+            </div>
+            <div>
                 <p>macaron au chocolat d'exception et glace à la vanille de Madagascar</p>
                 <p>65€</p>
-            </section>
-            <section>
+            </div>
+            <div>
                 <p>mousse au chocolat au piment d'espeletteet à la truffe noire</p>
                 <p>60€</p>
-            </section>
+            </div>
         </section>
 
     </article>
-    <footer>
-        <button><a href="">mentions légales</a></button>
-        <button><a href="">Contactez-nous</a></button>
-
-    </footer>
+</main>
+<footer>
+    <a class="afooter">Mentions légales</a>
+    <a class="afooter">Contactez-nous</a>
+</footer>
 </body>
 
 </html>
