maj lien footer

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
     </main>
     <footer>
-        <a class="afooter">Mentions légales</a>
-        <a class="afooter">Contactez-nous</a>
+        <a class="afooter" href="" target="_blank">Mentions légales</a>
+        <a class="afooter" href="mailto:contact@example.com">Contactez-nous</a>
     </footer>
 </body>
 
