--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1> ohmyfood</h1>
     </header>
     <main>
-        <nav id="imageMenu">
+        <nav class="imageMenu">
             <a id="lne" class="clickmenu" href="laNote.html">
                 <i class="fas fa-music"></i>
                 <h2 class="h2Lne">la Note enchantée</h2>
