--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </header>
     <main>
         <nav class="imageMenu">
-            <a id="lne" class="clickmenu" href="laNote.html">
+            <a "lne" class="clickmenu lne" href="laNote.html">
                 <i class="fas fa-music"></i>
                 <h2 class="h2Lne">la Note enchantée</h2>
                 <p class="pBold" >MENU</p>
             </a>
-            <a id="lcf" class="clickmenu" href="chicF.html">
+            <a class="clickmenu lcf" href="chicF.html">
                 <p>Le chic à la française</p>
                 <p>Menu</p>
             </a>
