maj récup modif perdu
maj ajout des animations
reste à optimiser le scss

--- a/chicF.html
+++ b/chicF.html
@@ -68,8 +68,8 @@
         </article>
     </main>
     <footer>
-        <a class="afooter">Mentions légales</a>
-        <a class="afooter">Contactez-nous</a>
+        <a class="aFooter">Mentions légales</a>
+        <a class="aFooter">Contactez-nous</a>
     </footer>
 </body>
 
