--- a/index.html
+++ b/index.html
@@ -19,32 +19,32 @@
     </header>
     <main>
         <nav class="imageMenu">
-            <a "lne" class="clickmenu lne" href="laNote.html">
+            <a class="clickmenu clickmenu__lne" href="laNote.html">
                 <i class="fas fa-music"></i>
-                <h2 class="h2Lne">la Note enchantée</h2>
-                <p class="pBold" >MENU</p>
+                <h2 class="clickmenu__lne--h2">la Note enchantée</h2>
+                <p>MENU</p>
             </a>
-            <a class="clickmenu lcf" href="chicF.html">
+            <a class="clickmenu clickmenu__lcf" href="chicF.html">
                 <p>Le chic à la française</p>
                 <p>Menu</p>
             </a>
-            <a id="pap" class="clickmenu" href="papilles.html">
-                <h2 class="h2Pap">Le délice des papilles</h2>
+            <a class="clickmenu clickmenu__pap" href="papilles.html">
+                <h2 class="clickmenu__pap--h2">Le délice des papilles</h2>
                 <p>Menu</p>
             </a>
-            <a id="plt" class="clickmenu" href="palette.html">
-                <h2 class="h2Plt">la palette du goût</h2>
+            <a class="clickmenu clickmenu__plt" href="palette.html">
+                <h2 class="clickmenu__plt--h2">la palette du goût</h2>
                 <p>Menu</p>
             </a>
         </nav>
         <nav id="buttonMenu">
-            <a class="afooter" id="buttonProch">Prochainement</a>
+            <a class="aProch">Prochainement </a>
         </nav>
 
     </main>
     <footer>
-        <a class="afooter" href="" target="_blank">Mentions légales</a>
-        <a class="afooter" href="mailto:contact@example.com">Contactez-nous</a>
+        <a class="aFooter" href="" target="_blank">Mentions légales</a>
+        <a class="aFooter" href="mailto:contact@example.com">Contactez-nous</a>
     </footer>
 </body>
 
