--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     </main>
     <footer>
-        <a class="aFooter" href="https://www.faprod.com/uploads/assets//Images/exemple-cgv.png" target="_blank">Mentions légales</a>
+        <a class="aFooter" href="https://www.anthedesign.fr/creation-de-sites-internet/exemple-de-mentions-legales-gratuites/" target="_blank">Mentions légales</a>
         <a class="aFooter" href="mailto:contact@example.com">Contactez-nous</a>
     </footer>
 </body>
