maj lien footer

--- a/chicF.html
+++ b/chicF.html
@@ -68,8 +68,8 @@
         </article>
     </main>
     <footer>
-        <a class="aFooter">Mentions légales</a>
-        <a class="aFooter">Contactez-nous</a>
+        <a class="aFooter" href="https://www.anthedesign.fr/creation-de-sites-internet/exemple-de-mentions-legales-gratuites/" target="_blank">Mentions légales</a>
+        <a class="aFooter" href="mailto:contact@example.com">Contactez-nous</a>
     </footer>
 </body>
 
