--- a/papilles.html
+++ b/papilles.html
@@ -38,45 +38,46 @@
                     <p>velouté de cèpes aux truffes</p>
                     <p>56€</p>
                 </div>
+            </section>
+            <section class="sectionColone">
+                <h3 class="fontN">pour bien continuer</h3>
+                <div>
+                    <p>poulet rôti aux herbes de provence et sa crème de truffe</p>
+                    <p>110€</p>
                 </div>
+                <div>
+                    <p>langouste rôtie et ses légumes de saison </p>
+                    <p>205€</p>
+                </div>
+                <div>
+                    <p>Côte de boeuf et sa purée de panais</p>
+                    <p>115€</p>
+                </div>
+            </section>
 
-                <section class="sectionColone">
-                    <h3 class="fontN">pour bien continuer</h3>
-                    <div>
-                        <p>poulet rôti aux herbes de provence et sa crème de truffe</p>
-                        <p>110€</p>
-                    </div>
-                    <div>
-                        <p>langouste rôtie et ses légumes de saison </p>
-                        <p>205€</p>
-                    </div>
-                    <div>
-                        <p>Côte de boeuf et sa purée de panais</p>
-                        <p>115€</p>
-                    </div>
-                </section>
-
-                <section class="sectionColone">
-                    <h3 class="fontN">pour bien terminer</h3>
-                    <div>
-                        <p>farandole de desserts du chef</p>
-                        <p>55€</p>
-                    </div>
-                    <div>
-                        <p>Crème brulée revisitée</p>
-                        <p>60€</p>
-                    </div>
-                    <div>
-                        <p>Tiramisu à la noisette</p>
-                        <p>55€</p>
-                    </div>
-                </section>
+            <section class="sectionColone">
+                <h3 class="fontN">pour bien terminer</h3>
+                <div>
+                    <p>farandole de desserts du chef</p>
+                    <p>55€</p>
+                </div>
+                <div>
+                    <p>Crème brulée revisitée</p>
+                    <p>60€</p>
+                </div>
+                <div>
+                    <p>Tiramisu à la noisette</p>
+                    <p>55€</p>
+                </div>
+            </section>
 
 
         </article>
     </main>
     <footer>
-        <a class="aFooter" href="https://www.anthedesign.fr/creation-de-sites-internet/exemple-de-mentions-legales-gratuites/" target="_blank">Mentions légales</a>
+        <a class="aFooter"
+            href="https://www.anthedesign.fr/creation-de-sites-internet/exemple-de-mentions-legales-gratuites/"
+            target="_blank">Mentions légales</a>
         <a class="aFooter" href="mailto:contact@example.com">Contactez-nous</a>
     </footer>
 </body>
