maj responsive& lien vers index

--- a/laNote.html
+++ b/laNote.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1 id="logo"> ohmyfood</h1>
+        <a href="index.html"><h1> ohmyfood</h1></a>
     </header>
     <main>
         <h1>La note enchantée</h1>
