--- a/palette.html
+++ b/palette.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1> ohmyfood</h1>
+        <a href="index.html"><h1> ohmyfood</h1></a>
     </header>
     <main>
         <h1>La palette du goût</h1>
