--- a/papilles.html
+++ b/papilles.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <h1> ohmyfood</h1>
+        <a href="index.html"><h1> ohmyfood</h1></a>
     </header>
 
     <main>
