--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <main>
         <nav class="imageMenu">
             <a class="clickmenu clickmenu__lne" href="laNote.html">
-                <i class="fas fa-music"></i>
+                <i id="notecolor" class="fas fa-music"></i>
                 <h2 class="clickmenu__lne--h2">la Note enchantée</h2>
                 <p>MENU</p>
             </a>
             <a class="clickmenu clickmenu__lcf" href="chicF.html">
-                <p>Le chic à la française</p>
+                <p id="lcfcolor">Le chic à la française</p>
                 <p>Menu</p>
             </a>
             <a class="clickmenu clickmenu__pap" href="papilles.html">
