--- a/laNote.html
+++ b/laNote.html
@@ -19,13 +19,13 @@
         <h1>La note enchantée</h1>
 
         <article id="lne">
-            <h2 id="lanote" class="h2Lne"><i class="fas fa-music"></i><br>
+            <h2 id="lanote" class="h2Lne"><i id="notecolor" class="fas fa-music"></i><br>
                 La note enchantée</h2>
             
             <section class="sectionColone">
 
 
-                <h3>Prélude</h3>
+                <div class="soustitre"><div class="trait  trait_lanote"></div><h3>Prélude</h3><div class="trait trait_lanote"></div></div>
 
                 <div>
                     <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p>
@@ -53,7 +53,7 @@
 
 
             <section class="sectionColone">
-                <h3>Point d'orgue</h3>
+                <div class="soustitre"><div class="trait trait_lanote"></div><h3>Point d'orgue</h3><div class="trait trait_lanote"></div></div>
                 <div>
                     <p>Noix de coquilles saint-Jacques sur lit de purée de céleri-rave</p>
                     <p class="pBold">102€</p>
@@ -75,7 +75,7 @@
             </section>
 
             <section class="sectionColone">
-                <h3>Mouvement final</h3>
+                <div class="soustitre"><div class="trait trait_lanote"></div><h3>Mouvement final</h3><div class="trait trait_lanote"></div></div>
 
                 <p>macaron ,oisette et chocolat, glace au caramel brun et sel de guérande</p>
 
@@ -87,7 +87,7 @@
             </section>
 
             <section id="sectionlanote2">
-                <i class="fas fa-music"></i>
+                <i id="notecolor" class="fas fa-music"></i>
                 <h2 class="h2Lne">La note enchantée</h2>
             </section>
         </article>
