--- a/papilles.html
+++ b/papilles.html
@@ -22,10 +22,10 @@
     <main>
         <h1>Le délice des papilles</h1>
         <article id="pap">
-            <h2 class="h2Pap">Le délice des papilles</h2>
+            <h2 id="papcolor" class="h2Pap">Le délice des papilles</h2>
 
             <section class="sectionColone">
-                <h3 class="fontN">Pour bien commencer</h3>
+                <div class="soustitre"><div class="trait  trait_pap1"></div><h3 class="fontN">Pour bien commencer</h3><div class="trait trait_pap1"></div></div>
                 <div>
                     <p>tartare de thon assaisonné au yuzu</p>
                     <p>55€</p>
@@ -40,7 +40,7 @@
                 </div>
             </section>
             <section class="sectionColone">
-                <h3 class="fontN">pour bien continuer</h3>
+                <div class="soustitre"><div class="trait  trait_pap2"></div><h3 class="fontN">pour bien continuer</h3><div class="trait trait_pap2"></div></div>
                 <div>
                     <p>poulet rôti aux herbes de provence et sa crème de truffe</p>
                     <p>110€</p>
@@ -56,7 +56,7 @@
             </section>
 
             <section class="sectionColone">
-                <h3 class="fontN">pour bien terminer</h3>
+                <div class="soustitre"><div class="trait  trait_pap3"></div><h3 class="fontN">pour bien terminer</h3><div class="trait trait_pap3"></div></div>
                 <div>
                     <p>farandole de desserts du chef</p>
                     <p>55€</p>
