--- a/chicF.html
+++ b/chicF.html
@@ -17,10 +17,10 @@
         <h1>Le chic à la française</h1>
 
         <article id="lcf">
-            <h2>Le chic à la française</h2>
+            <h2 id="lcfcolor">Le chic à la française</h2>
             
-            <section class="sectionColone">
-                <h3>pour se mettre en appétit</h3>
+            <section class="sectionColone lcfcolor1">
+                <div class="soustitre"><div class="trait  trait_lcf1"></div><h3>pour se mettre en appétit</h3><div class="trait  trait_lcf1"></div></div>
                 <div>
                     <p>Tartare de poulpe acidulé aux zests d'orange</p>
                     <p class="pBold">79€</p>
@@ -35,8 +35,8 @@
                 </div>
             </section>
            
-            <section class="sectionColone">
-                <h3>Plaisir des papilles</h3>
+            <section class="sectionColone lcfcolor2">
+                <div class="soustitre"><div class="trait  trait_lcf2"></div><h3>Plaisir des papilles</h3><div class="trait  trait_lcf2"></div></div>
                 <div>
                     <p>Coquilles de saint-Jacques acccompagnées d'une purée de panais</p>
                     <p class="pBold">95€</p>
@@ -51,8 +51,8 @@
                 </div>
             </section>
 
-            <section class="sectionColone">
-                <h3>Gourmandises sucrées</h3>
+            <section class="sectionColone lcfcolor3">
+                <div class="soustitre"><div class="trait  trait_lcf3"></div><h3>Gourmandises sucrées</h3><div class="trait  trait_lcf3"></div></div>
 
                 <p>Pétales de violettes glacés et purée de noisettes </p>
 
