maj color finish

--- a/palette.html
+++ b/palette.html
@@ -18,10 +18,10 @@
     <main>
         <h1>La palette du goût</h1>
     <article id="plt">
-        <h2 class="h2Plt">La palette du goût</h2>
+        <h2 class="pgcolor" class="h2Plt">La palette du goût</h2>
 
         <section class="sectionColone">
-            <h3 class="fontN">esquisse</h3>
+            <div class="soustitre"><div class="trait trait_pgcolor"></div><h3 class="fontN">esquisse</h3><div class="trait trait_pgcolor2"></div></div>
             <div>
                 <p>fricassée d'escargot au piment d'espelette</p>
                 <p>60€</p>
@@ -37,7 +37,7 @@
         </section>
 
         <section class="sectionColone">
-            <h3 class="fontN">oeuvre de maître</h3>
+            <div class="soustitre"><div class="trait trait_pgcolor"></div><h3 class="fontN">oeuvre de maître</h3><div class="trait trait_pgcolor2"></div></div>
             <div>
                 <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
                 <p>70€</p>
@@ -53,7 +53,7 @@
         </section>
 
         <section class="sectionColone">
-            <h3 class="fontN">Au sommet de l'art</h3>
+            <div class="soustitre"><div class="trait trait_pgcolor"></div><h3 class="fontN">Au sommet de l'art</h3><div class="trait trait_pgcolor2"></div></div>
             <div>
                 <p>Paris-Brest revisité</p>
                 <p>55€</p>
