--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <nav class="imageMenu">
             <a class="clickmenu clickmenu__lne" href="laNote.html">
-                <i id="notecolor" class="fas fa-music"></i>
+                <i class="fas fa-music"></i>
                 <h2 class="clickmenu__lne--h2">la Note enchantée</h2>
                 <p>MENU</p>
             </a>
