--- a/laNote.html
+++ b/laNote.html
@@ -19,7 +19,7 @@
         <h1>La note enchantée</h1>
 
         <article id="lne">
-            <h2 id="lanote" class="h2Lne"><i id="notecolor" class="fas fa-music"></i><br>
+            <h2 id="lanote" class="h2Lne"><i class="fas fa-music"></i><br>
                 La note enchantée</h2>
             
             <section class="sectionColone">
@@ -87,7 +87,7 @@
             </section>
 
             <section id="sectionlanote2">
-                <i id="notecolor" class="fas fa-music"></i>
+                <i class="fas fa-music"></i>
                 <h2 class="h2Lne">La note enchantée</h2>
             </section>
         </article>
