--- a/palette.html
+++ b/palette.html
@@ -18,7 +18,7 @@
     <main>
         <h1>La palette du goût</h1>
     <article id="plt">
-        <h2 class="pgcolor" class="h2Plt">La palette du goût</h2>
+        <h2 id="pgcolor" class="h2Plt">La palette du goût</h2>
 
         <section class="sectionColone">
             <div class="soustitre"><div class="trait trait_pgcolor"></div><h3 class="fontN">esquisse</h3><div class="trait trait_pgcolor2"></div></div>
